change: update to 0.7.23

--- a/Chat/ChatConsoleApp/App.config
+++ b/Chat/ChatConsoleApp/App.config
@@ -10,7 +10,7 @@
 	</appSettings>
 	<ClientSetup>
 		<CommunicationSetup>
-			<client library="streaming" protocol="ws"/>
+			<client library="streaming" protocol="ws" serverdns="127.0.0.1" port="50010"/>
 		</CommunicationSetup>
 	</ClientSetup>
 </configuration>
