--- a/SimplePinger/PingerServer/App.config
+++ b/SimplePinger/PingerServer/App.config
@@ -39,7 +39,7 @@
 				           SqlEngineType="SQLITE"
 				           ConnectionStr="database">
 
-					<!-- This is the configuration for the data store of internal ODOS domain named Missionware.Cognibase.Domain.-->
+					<!-- This is the configuration for the data store of internal Cognibase domain named Missionware.Cognibase.Domain.-->
 					<Missionware.Cognibase.AppManagement.Domain />
 
 					<!-- This is the configuration for the data store of internal identiy domain named Missionware.Cognibase.Security.Identity.Domain  -->
