--- a/SimplePinger/PingerWinFormsApp/App.config
+++ b/SimplePinger/PingerWinFormsApp/App.config
@@ -3,7 +3,7 @@
 <configuration>
 	<!-- Here we define the COGNIBASE configuration section  -->
 	<configSections>
-		<section name="OdosSetup" type="COGNIBASE" />
+		<section name="ClientSetup" type="COGNIBASE" />
 	</configSections>
 
 	<appSettings>
@@ -16,14 +16,12 @@
 		<!-- If it will store credentials in first login and use it in subsequent executions -->
 		<add key="Login With Stored Credentials" value="true" />
 	</appSettings>
-	<OdosSetup>
-		<OdosClientSetup>
-			<!-- Here we set the settings for the communication method that the client will use to connect to the server.
-				 Each library may have more than one protocols. 
-				 For example "Streaming" library contains the NamedPipes (pipe) and the Web Socket (ws) implementation. -->
-			<CommunicationSetup>
-				<client library="streaming" protocol="ws" />
-			</CommunicationSetup>
-		</OdosClientSetup>
-	</OdosSetup>
+	<ClientSetup>
+		<!-- Here we set the settings for the communication method that the client will use to connect to the server.
+				Each library may have more than one protocols. 
+				For example "Streaming" library contains the NamedPipes (pipe) and the Web Socket (ws) implementation. -->
+		<CommunicationSetup>
+			<client library="streaming" protocol="ws" />
+		</CommunicationSetup>
+	</ClientSetup>
 </configuration>
