--- a/SimplePinger/PingerServer/App.config
+++ b/SimplePinger/PingerServer/App.config
@@ -26,9 +26,9 @@
 		<ServerSetup>
 			<!-- Defined the security accounts. Here we define that the security accounts are coming from the
 	     Operating System. -->
-			<IdentityStoreSetup Name="Pinger" availableversion="1">
+			<IdentityStoreSetup Name="Basic" availableversion="1">
 				<!-- Here we define the "Configured" Accounts. The data are stored in the DB only. -->
-				<ConfiguredAccounts domainid="TestDev" domainfullname="TestDev">
+				<ConfiguredAccounts domainid="Basic" domainfullname="Basic">
 					<Role name="admins" memberusers="user1" />
 					<User name="user1" password="user1" />
 				</ConfiguredAccounts>
