--- a/SimplePinger/PingerMauiApp/PingerMauiApp.csproj
+++ b/SimplePinger/PingerMauiApp/PingerMauiApp.csproj
@@ -41,6 +41,7 @@
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-android|AnyCPU'">
 	  <EmbedAssembliesIntoApk>False</EmbedAssembliesIntoApk>
+	  <RunAOTCompilation>False</RunAOTCompilation>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -98,24 +99,24 @@
 		<ProjectReference Include="..\..\..\odos\src\Missionware.Cognibase.UI.Common\Missionware.Cognibase.UI.Common.csproj" />
 	</ItemGroup>
 	<ItemGroup Condition="!$(SolutionName.Contains('Refactoring')) And !$(SolutionName.Contains('Analysis'))">
-		<PackageReference Include="Missionware.Cognibase.Comm.Streaming" Version="0.7.44" />
-		<PackageReference Include="Missionware.Cognibase.AppManagement.Domain" Version="0.7.44" />
-		<PackageReference Include="Missionware.Cognibase.Security.Identity.Domain" Version="0.7.44" />
-		<PackageReference Include="Missionware.Cognibase.Security.Identity" Version="0.7.44" />
-		<PackageReference Include="Missionware.Cognibase.Security.Ldap" Version="0.7.44" />
-		<PackageReference Include="Missionware.Cognibase.Security.WindowsOS" Version="0.7.44" />
-		<PackageReference Include="Missionware.Cognibase.Security.LinuxOS" Version="0.7.44" />
-		<PackageReference Include="Missionware.Cognibase.Security" Version="0.7.44" />
-		<PackageReference Include="Missionware.Cognibase" Version="0.7.44" />
-		<PackageReference Include="Missionware.Serialization" Version="0.7.44" />
-		<PackageReference Include="Missionware.SharedLib.UI.WindowsOS" Version="0.7.44" />
-		<PackageReference Include="Missionware.SharedLib.WindowsOS" Version="0.7.44" />
-		<PackageReference Include="Missionware.SharedLib.LinuxOS" Version="0.7.44" />
-		<PackageReference Include="Missionware.SharedLib" Version="0.7.44" />
-		<PackageReference Include="Missionware.Cognibase.UI.Maui" Version="0.7.44" />
-		<PackageReference Include="Missionware.SharedLib.UI" Version="0.7.44" />
-		<PackageReference Include="Missionware.SharedLib.UI.Maui" Version="0.7.44" />
-		<PackageReference Include="Missionware.Cognibase.UI.Common" Version="0.7.44" />
+		<PackageReference Include="Missionware.Cognibase.Comm.Streaming" Version="0.7.55" />
+		<PackageReference Include="Missionware.Cognibase.AppManagement.Domain" Version="0.7.55" />
+		<PackageReference Include="Missionware.Cognibase.Security.Identity.Domain" Version="0.7.55" />
+		<PackageReference Include="Missionware.Cognibase.Security.Identity" Version="0.7.55" />
+		<PackageReference Include="Missionware.Cognibase.Security.Ldap" Version="0.7.55" />
+		<PackageReference Include="Missionware.Cognibase.Security.WindowsOS" Version="0.7.55" />
+		<PackageReference Include="Missionware.Cognibase.Security.LinuxOS" Version="0.7.55" />
+		<PackageReference Include="Missionware.Cognibase.Security" Version="0.7.55" />
+		<PackageReference Include="Missionware.Cognibase" Version="0.7.55" />
+		<PackageReference Include="Missionware.Serialization" Version="0.7.55" />
+		<PackageReference Include="Missionware.SharedLib.UI.WindowsOS" Version="0.7.55" />
+		<PackageReference Include="Missionware.SharedLib.WindowsOS" Version="0.7.55" />
+		<PackageReference Include="Missionware.SharedLib.LinuxOS" Version="0.7.55" />
+		<PackageReference Include="Missionware.SharedLib" Version="0.7.55" />
+		<PackageReference Include="Missionware.Cognibase.UI.Maui" Version="0.7.55" />
+		<PackageReference Include="Missionware.SharedLib.UI" Version="0.7.55" />
+		<PackageReference Include="Missionware.SharedLib.UI.Maui" Version="0.7.55" />
+		<PackageReference Include="Missionware.Cognibase.UI.Common" Version="0.7.55" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\PingerDomain\PingerDomain.csproj" />
