change: use of simple authenticaiton in wpf

--- a/SimplePinger/PingerWpfApp/PingerWpfApp.csproj
+++ b/SimplePinger/PingerWpfApp/PingerWpfApp.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
 	  <ProjectReference Include="..\PingerDomain\PingerDomain.csproj" />
+	  <ProjectReference Include="..\PingerUiCommon\PingerUiCommon.csproj" />
   </ItemGroup>
 
   <ItemGroup>
