--- a/Chat/ChatServer/ChatServer.csproj
+++ b/Chat/ChatServer/ChatServer.csproj
@@ -17,6 +17,7 @@
 		<ProjectReference Include="..\..\..\odos\src\Missionware.Cognibase.Security.WindowsOS\Missionware.Cognibase.Security.WindowsOS.csproj" />
 		<ProjectReference Include="..\..\..\odos\src\Missionware.Cognibase.Security.LinuxOS\Missionware.Cognibase.Security.LinuxOS.csproj" />
 		<ProjectReference Include="..\..\..\odos\src\Missionware.Cognibase.Security\Missionware.Cognibase.Security.csproj" />
+		<ProjectReference Include="..\..\..\odos\src\Missionware.Cognibase.Server.Adapters.Rdbms.POSTGRESQL\Missionware.Cognibase.Server.Adapters.Rdbms.POSTGRESQL.csproj" />
 		<ProjectReference Include="..\..\..\odos\src\Missionware.Cognibase.Server.Adapters.Rdbms.MSSQL\Missionware.Cognibase.Server.Adapters.Rdbms.MSSQL.csproj" />
 		<ProjectReference Include="..\..\..\odos\src\Missionware.Cognibase.Server.Adapters.Rdbms.SQLite\Missionware.Cognibase.Server.Adapters.Rdbms.SQLite.csproj" />
 		<ProjectReference Include="..\..\..\odos\src\Missionware.Cognibase.Server\Missionware.Cognibase.Server.csproj" />
@@ -29,24 +30,24 @@
 		<ProjectReference Include="..\..\..\odos\src\Missionware.SharedLib.Logging.SerilogAddin\Missionware.SharedLib.Logging.SerilogAddin.csproj" />
 	</ItemGroup>
 	<ItemGroup Condition="!$(SolutionName.Contains('Refactoring')) And !$(SolutionName.Contains('Analysis'))">
-		<PackageReference Include="Missionware.Cognibase.Comm.Streaming" Version="0.8.1" />
-		<PackageReference Include="Missionware.Cognibase.AppManagement.Domain" Version="0.8.1" />
-		<PackageReference Include="Missionware.Cognibase.Security.Identity.Domain" Version="0.8.1" />
-		<PackageReference Include="Missionware.Cognibase.Security.Identity" Version="0.8.1" />
-		<PackageReference Include="Missionware.Cognibase.Security.Ldap" Version="0.8.1" />
-		<PackageReference Include="Missionware.Cognibase.Security.WindowsOS" Version="0.8.1" />
-		<PackageReference Include="Missionware.Cognibase.Security.LinuxOS" Version="0.8.1" />
-		<PackageReference Include="Missionware.Cognibase.Security" Version="0.8.1" />
-		<PackageReference Include="Missionware.Cognibase.Server.Adapters.Rdbms.MSSQL" Version="0.8.1" />
-		<PackageReference Include="Missionware.Cognibase.Server.Adapters.Rdbms.SQLite" Version="0.8.1" />
-		<PackageReference Include="Missionware.Cognibase.Server" Version="0.8.1" />
-		<PackageReference Include="Missionware.Cognibase" Version="0.8.1" />
-		<PackageReference Include="Missionware.Serialization" Version="0.8.1" />
-		<PackageReference Include="Missionware.SharedLib.WindowsOS" Version="0.8.1" />
-		<PackageReference Include="Missionware.SharedLib.LinuxOS" Version="0.8.1" />
-		<PackageReference Include="Missionware.SharedLib" Version="0.8.1" />
-		<PackageReference Include="Missionware.Serialization.BinaryFormatterAddin" Version="0.8.1" />
-		<PackageReference Include="Missionware.SharedLib.Logging.SerilogAddin" Version="0.8.1" />
+		<PackageReference Include="Missionware.Cognibase.Comm.Streaming" Version="0.8.2" />
+		<PackageReference Include="Missionware.Cognibase.AppManagement.Domain" Version="0.8.2" />
+		<PackageReference Include="Missionware.Cognibase.Security.Identity.Domain" Version="0.8.2" />
+		<PackageReference Include="Missionware.Cognibase.Security.Identity" Version="0.8.2" />
+		<PackageReference Include="Missionware.Cognibase.Security.Ldap" Version="0.8.2" />
+		<PackageReference Include="Missionware.Cognibase.Security.WindowsOS" Version="0.8.2" />
+		<PackageReference Include="Missionware.Cognibase.Security.LinuxOS" Version="0.8.2" />
+		<PackageReference Include="Missionware.Cognibase.Security" Version="0.8.2" />
+		<PackageReference Include="Missionware.Cognibase.Server.Adapters.Rdbms.MSSQL" Version="0.8.2" />
+		<PackageReference Include="Missionware.Cognibase.Server.Adapters.Rdbms.SQLite" Version="0.8.2" />
+		<PackageReference Include="Missionware.Cognibase.Server" Version="0.8.2" />
+		<PackageReference Include="Missionware.Cognibase" Version="0.8.2" />
+		<PackageReference Include="Missionware.Serialization" Version="0.8.2" />
+		<PackageReference Include="Missionware.SharedLib.WindowsOS" Version="0.8.2" />
+		<PackageReference Include="Missionware.SharedLib.LinuxOS" Version="0.8.2" />
+		<PackageReference Include="Missionware.SharedLib" Version="0.8.2" />
+		<PackageReference Include="Missionware.Serialization.BinaryFormatterAddin" Version="0.8.2" />
+		<PackageReference Include="Missionware.SharedLib.Logging.SerilogAddin" Version="0.8.2" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\ChatDomain\ChatDomain.csproj" />
