--- a/Chat/ChatServer/App.config
+++ b/Chat/ChatServer/App.config
@@ -34,7 +34,7 @@
 
 			<!-- Here we set the settings for the store library and configuration.  -->
 			<DataStoresSetup>
-				<DataStore PersistenceMgrType="OODB"
+				<DataStore DomainAdapterType="OODB"
 						   SqlEngineType="SQLITE"
 						   ConnectionStr="database">
 
