--- a/Todo/TodoServer/App.config
+++ b/Todo/TodoServer/App.config
@@ -30,7 +30,7 @@
 			</IdentityStoreSetup>
 
 			<DataStoresSetup>
-				<DataStore PersistenceMgrType="OODB"
+				<DataStore DomainAdapterType="OODB"
 				           SqlEngineType="SQLITE"
 				           ConnectionStr="database">
 
