--- a/SimplePinger/PingerServer/App.config
+++ b/SimplePinger/PingerServer/App.config
@@ -35,7 +35,7 @@
 			</IdentityStoreSetup>
 
 			<DataStoresSetup>
-				<DataStore PersistenceMgrType="OODB"
+				<DataStore DomainAdapterType="OODB"
 				           SqlEngineType="SQLITE"
 				           ConnectionStr="database">
 
