fix: Licensing with lowercase filenames - see 'Cognibase Licensing Readme.md' for concept

--- a/Todo/TodoApp/App.config
+++ b/Todo/TodoApp/App.config
@@ -14,7 +14,7 @@
 		<add key="Log To File Level" value="Trace" />
 
 		<!-- If it will store credentials in first login and use it in subsequent executions -->
-		<add key="Login With Stored Credentials" value="true" />
+		<add key="Login With Stored Credentials" value="false" />
 	</appSettings>
 	<ClientSetup>
 		<!-- Here we set the settings for the communication method that the client will use to connect to the server.
