change: update to 0.8.6

--- a/Chat/ChatServer/App.config
+++ b/Chat/ChatServer/App.config
@@ -35,16 +35,16 @@
 			<!-- Here we set the settings for the store library and configuration.  -->
 			<DataStoresSetup>
 				<DataStore DomainAdapterType="OODB"
-						   DataBaseAdapterEngineType="POSTGRESQL"
-						   ConnectionStr="Server=localhost:5432;User ID=postgres;Password=kostas12#$5">
+						   DataBaseAdapterEngineType="SQLITE"
+						   ConnectionStr="database">
 
 					<!-- This is the configuration for the data store of system Cognibase domain named Missionware.Cognibase.Domain.-->
-					<Missionware.Cognibase.AppManagement.Domain AdditionalConnectionStr="Database=ChatSystemDb" />
+					<Missionware.Cognibase.AppManagement.Domain/>
 
 					<!-- This is the configuration for the data store of identiy domain named Missionware.Cognibase.Security.Identity.Domain  -->
-					<Missionware.Cognibase.Security.Identity.Domain AdditionalConnectionStr="Database=ChatIdentityDb" />
+					<Missionware.Cognibase.Security.Identity.Domain/>
 
-					<ChatDomain Mandatory="True" AdditionalConnectionStr="Database=ChatMainDb" />
+					<ChatDomain Mandatory="True" />
 
 				</DataStore>
 			</DataStoresSetup>
