--- a/SimplePinger/PingerAvaloniaApp/App.config
+++ b/SimplePinger/PingerAvaloniaApp/App.config
@@ -21,7 +21,7 @@
 				Each library may have more than one protocols. 
 				For example "Streaming" library contains the NamedPipes (pipe) and the Web Socket (ws) implementation. -->
 		<CommunicationSetup>
-			<client library="streaming" protocol="ws" serverdns="localhost" />
+			<client library="streaming" protocol="ws" serverdns="192.168.1.60" />
 		</CommunicationSetup>
 	</ClientSetup>
 </configuration>
