--- a/SimplePinger/PingerWpfApp/App.config
+++ b/SimplePinger/PingerWpfApp/App.config
@@ -14,9 +14,11 @@
 		<add key="Log To File Level" value="Trace" />
 
 		<!-- If it will store credentials in first login and use it in subsequent executions -->
-		<add key="Login With Stored Credentials" value="true" />
+		<add key="IsSaveCredentialsEnforced" value="true"/>
+		<add key="LoginWithStoredCredentials" value="true" />
 	</appSettings>
 	<ClientSetup>
+		<ProcessSecurity UseCustomWorkflowToConnect="true" />
 		<!-- Here we set the settings for the communication method that the client will use to connect to the server.
 				Each library may have more than one protocols. 
 				For example "Streaming" library contains the NamedPipes (pipe) and the Web Socket (ws) implementation. -->
