--- a/Chat/ChatServer/App.config
+++ b/Chat/ChatServer/App.config
@@ -8,7 +8,7 @@
 
 	<!-- Here we set various settings for the process (both Cognibase defined and custom application ones) -->
 	<appSettings>
-		<add key="Log To Console Level" value="Trace"/>
+		<add key="Log To Output Level" value="Trace"/>
 		<add key="Log To File Level" value="Trace"/>		
 
 		<!-- Setting: SecurityImmutableAccountsMode { None, Registered, Configured, OSDefined, All } -->
